@@ -1,27 +1,26 @@
 package com.lootbeams;
 
-import com.lootbeams.compat.ApotheosisCompat;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.texture.TextureAtlas;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.entity.item.ItemEntity;
-import net.minecraft.world.item.*;
+import net.minecraft.world.item.ArmorItem;
+import net.minecraft.world.item.BowItem;
+import net.minecraft.world.item.CrossbowItem;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ShieldItem;
+import net.minecraft.world.item.TieredItem;
+import net.minecraft.world.item.TooltipFlag;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.client.event.RenderNameTagEvent;
-import net.minecraftforge.client.event.TextureStitchEvent;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.entity.EntityJoinLevelEvent;
 import net.minecraftforge.event.entity.EntityLeaveLevelEvent;
-import net.minecraftforge.fml.ModList;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 import net.minecraftforge.registries.ForgeRegistries;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mod.EventBusSubscriber(modid = LootBeams.MODID, bus = Mod.EventBusSubscriber.Bus.FORGE, value = Dist.CLIENT)
 public class ClientSetup {
@@ -33,44 +32,36 @@ public class ClientSetup {
 	}
 
 	public static void onItemCreation(EntityJoinLevelEvent event){
-		if(event.getEntity() instanceof ItemEntity ie){
-			if(!LootBeamRenderer.TOOLTIP_CACHE.containsKey(ie)){
+		if (event.getEntity() instanceof ItemEntity ie) {
+			if (!LootBeamRenderer.TOOLTIP_CACHE.containsKey(ie)) {
 				LootBeamRenderer.TOOLTIP_CACHE.put(ie, ie.getItem().getTooltipLines(null, TooltipFlag.Default.NORMAL));
 			}
-			if(!LootBeamRenderer.LIGHT_CACHE.contains(ie)){
+			if (!LootBeamRenderer.LIGHT_CACHE.contains(ie)) {
 				LootBeamRenderer.LIGHT_CACHE.add(ie);
 			}
 		}
 	}
 
-	public static void entityRemoval(EntityLeaveLevelEvent event){
-	if(event.getEntity() instanceof ItemEntity ie){
+	public static void entityRemoval(EntityLeaveLevelEvent event) {
+		if (event.getEntity() instanceof ItemEntity ie) {
 			LootBeamRenderer.TOOLTIP_CACHE.remove(ie);
 			LootBeamRenderer.LIGHT_CACHE.remove(ie);
 		}
 	}
+	
+	public static boolean isEquipmentItem(Item item) {
+		return item instanceof TieredItem || item instanceof ArmorItem || item instanceof ShieldItem || item instanceof BowItem || item instanceof CrossbowItem;
+	}
 
 	public static int overrideLight(ItemEntity ie, int light){
-		if(Configuration.ALL_ITEMS.get()){
+		if (Configuration.ALL_ITEMS.get()) {
 			light = 15728640;
 		} else {
-			if(Configuration.ONLY_EQUIPMENT.get()){
-				if(ie.getItem().getItem() instanceof SwordItem || ie.getItem().getItem() instanceof TieredItem || ie.getItem().getItem() instanceof ArmorItem || ie.getItem().getItem() instanceof ShieldItem || ie.getItem().getItem() instanceof BowItem || ie.getItem().getItem() instanceof CrossbowItem){
-					light = 15728640;
-				}
+			if(Configuration.ONLY_EQUIPMENT.get() && isEquipmentItem(ie.getItem().getItem())){
+				light = 15728640;
 			}
-			if(Configuration.ONLY_RARE.get()){
-				if(ModList.get().isLoaded("apotheosis")){
-					if(ApotheosisCompat.isApotheosisItem(ie.getItem())){
-						if(!ApotheosisCompat.getRarityName(ie.getItem()).equals("common") || ie.getItem().getRarity() != Rarity.COMMON){
-							light = 15728640;
-						}
-					}
-				} else {
-					if (ie.getItem().getRarity() != Rarity.COMMON) {
-						light = 15728640;
-					}
-				}
+			if(Configuration.ONLY_RARE.get() && LootBeamRenderer.compatRarityCheck(ie, false)){
+				light = 15728640;
 			}
 			if (isItemInRegistryList(Configuration.SOUND_ONLY_WHITELIST.get(), ie.getItem().getItem())) {
 				light = 15728640;
@@ -84,27 +75,11 @@ public class ClientSetup {
 		if(Configuration.SOUND_ALL_ITEMS.get() && !isItemInRegistryList(Configuration.BLACKLIST.get(), itemEntity.getItem().getItem())){
 			itemEntity.level.playSound(null, itemEntity, LootBeams.LOOT_DROP.get(), SoundSource.AMBIENT, Configuration.SOUND_VOLUME.get().floatValue(), ((itemEntity.level.random.nextFloat() - itemEntity.level.random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
 		} else {
-			if (Configuration.SOUND_ONLY_EQUIPMENT.get()) {
-				List<Class<? extends Item>> equipmentClasses = Arrays.asList(SwordItem.class, TieredItem.class, ArmorItem.class, ShieldItem.class, BowItem.class, CrossbowItem.class, TridentItem.class, ArrowItem.class, FishingRodItem.class);
-				for (Class<? extends Item> item : equipmentClasses) {
-					if (item.isAssignableFrom(itemEntity.getItem().getItem().getClass())) {
-						itemEntity.level.playSound(null, itemEntity, LootBeams.LOOT_DROP.get(), SoundSource.AMBIENT, Configuration.SOUND_VOLUME.get().floatValue(), ((itemEntity.level.random.nextFloat() - itemEntity.level.random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
-						break;
-					}
-				}
+			if (Configuration.SOUND_ONLY_EQUIPMENT.get() && isEquipmentItem(itemEntity.getItem().getItem())) {
+				itemEntity.level.playSound(null, itemEntity, LootBeams.LOOT_DROP.get(), SoundSource.AMBIENT, Configuration.SOUND_VOLUME.get().floatValue(), ((itemEntity.level.random.nextFloat() - itemEntity.level.random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
 			}
-			if (Configuration.SOUND_ONLY_RARE.get()) {
-				if(ModList.get().isLoaded("apotheosis")){
-					if(ApotheosisCompat.isApotheosisItem(itemEntity.getItem())){
-						if(!ApotheosisCompat.getRarityName(itemEntity.getItem()).equals("common") || itemEntity.getItem().getRarity() != Rarity.COMMON){
-							itemEntity.level.playSound(null, itemEntity, LootBeams.LOOT_DROP.get(), SoundSource.AMBIENT, Configuration.SOUND_VOLUME.get().floatValue(), ((itemEntity.level.random.nextFloat() - itemEntity.level.random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
-						}
-					}
-				} else {
-					if (itemEntity.getItem().getRarity() != Rarity.COMMON) {
-						itemEntity.level.playSound(null, itemEntity, LootBeams.LOOT_DROP.get(), SoundSource.AMBIENT, Configuration.SOUND_VOLUME.get().floatValue(), ((itemEntity.level.random.nextFloat() - itemEntity.level.random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
-					}
-				}
+			if (Configuration.SOUND_ONLY_RARE.get() && LootBeamRenderer.compatRarityCheck(itemEntity, false)) {
+				itemEntity.level.playSound(null, itemEntity, LootBeams.LOOT_DROP.get(), SoundSource.AMBIENT, Configuration.SOUND_VOLUME.get().floatValue(), ((itemEntity.level.random.nextFloat() - itemEntity.level.random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
 			}
 			if (isItemInRegistryList(Configuration.SOUND_ONLY_WHITELIST.get(), itemEntity.getItem().getItem())) {
 				itemEntity.level.playSound(null, itemEntity, LootBeams.LOOT_DROP.get(), SoundSource.AMBIENT, Configuration.SOUND_VOLUME.get().floatValue(), ((itemEntity.level.random.nextFloat() - itemEntity.level.random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
@@ -113,8 +88,7 @@ public class ClientSetup {
 	}
 
 	public static void onRenderNameplate(RenderNameTagEvent event) {
-		if (event.getEntity() instanceof ItemEntity) {
-			ItemEntity itemEntity = (ItemEntity) event.getEntity();
+		if (event.getEntity() instanceof ItemEntity itemEntity) {
 			if (Minecraft.getInstance().player.distanceToSqr(itemEntity) > Configuration.RENDER_DISTANCE.get() * Configuration.RENDER_DISTANCE.get()) {
 				return;
 			}
@@ -123,14 +97,8 @@ public class ClientSetup {
 			if (Configuration.ALL_ITEMS.get()) {
 				shouldRender = true;
 			} else {
-				if (Configuration.ONLY_EQUIPMENT.get()) {
-					List<Class<? extends Item>> equipmentClasses = Arrays.asList(SwordItem.class, TieredItem.class, ArmorItem.class, ShieldItem.class, BowItem.class, CrossbowItem.class, TridentItem.class, ArrowItem.class, FishingRodItem.class);
-					for (Class<? extends Item> item : equipmentClasses) {
-						if (item.isAssignableFrom(itemEntity.getItem().getItem().getClass())) {
-							shouldRender = true;
-							break;
-						}
-					}
+				if (Configuration.ONLY_EQUIPMENT.get() && isEquipmentItem(itemEntity.getItem().getItem())) {
+					shouldRender = true;
 				}
 
 				if (Configuration.ONLY_RARE.get()) {
@@ -155,12 +123,10 @@ public class ClientSetup {
 	 * Checks if the given item is in the given list of registry names.
 	 */
 	private static boolean isItemInRegistryList(List<String> registryNames, Item item) {
-		if (registryNames.size() > 0) {
-			for (String id : registryNames.stream().filter((s) -> (!s.isEmpty())).collect(Collectors.toList())) {
-				if (!id.contains(":")) {
-					if (ForgeRegistries.ITEMS.getKey(item).getNamespace().equals(id)) {
-						return true;
-					}
+		if (!registryNames.isEmpty()) {
+			for (String id : registryNames.stream().filter(s -> !s.isEmpty()).toList()) {
+				if (!id.contains(":") && ForgeRegistries.ITEMS.getKey(item).getNamespace().equals(id)) {
+					return true;
 				}
 				ResourceLocation itemResource = ResourceLocation.tryParse(id);
 				if (itemResource != null && ForgeRegistries.ITEMS.getValue(itemResource).asItem() == item.asItem()) {
